<resources>
    <string name="app_name">TECBANK</string>
    <string name="title_activity_register">register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_gui">GUI</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="transferencias">Transferencias</string>
    <string name="salir">Salir</string>
    <string name="info">Info</string>
    <string name="ahorro">Ahorro</string>
    <string name="historial">Historial</string>
    <string name="tecbank">TECBANK</string>
    <string name="movil">Movil</string>
    <string name="cuentas">Cuentas</string>
    <string name="numero_cuenta">numero cuenta</string>
    <string name="transferencia_entre_cuentas_tecbank">Transferencia entre cuentas TECBANK</string>
    <string name="motivo_o_concepto">Motivo o Concepto</string>
    <string name="cuenta_a_acreditar">Cuenta a acreditar</string>
    <string name="cuenta_a_debitar">Cuenta a debitar</string>
    <string name="montoR">Monto</string>
    <string name="c_digo_confirmaci_n">Código confirmación</string>
    <string name="voucher_transferencia">Voucher Transferencia</string>
    <string name="textview">TextView</string>
    <string name="fecha">Fecha:</string>
    <string name="nombre">Nombre:</string>
    <string name="cuenta_debitada">Cuenta debitada:</string>
    <string name="cuenta_acreditada">Cuenta acreditada:</string>
    <string name="monto2">Monto:</string>
    <string name="motivo_o_concepto2">Motivo o Concepto:</string>

    <string name="nueva_transferencia">Nueva Transferencia</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tiene_una_cuenta">¿No tiene una cuenta?</string>
    <string name="registrarseR">Registrarse</string>
    <string name="login">Login</string>
    <string name="usuarioR">Usuario</string>
    <string name="contrase_aR">Contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="monto">Monto</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="cuenta">Cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="monto_cuentaC">monto cuenta</string>
    <string name="tipo_cambioT">Tipo Cambio:</string>
    <string name="informativaT">Informativa</string>
    <string name="sucursalesT">Sucursales:</string>
    <string name="contactoT">Contacto:</string>
    <string name="sobres_de_ahorro">Sobres de Ahorro</string>
    <string name="crear_sobreA">Crear Sobre</string>
    <string name="eliminar_sobreA">Eliminar Sobre</string>
    <string name="historial_sobreA">Historial Sobre</string>
    <string name="cantidad_dineroCS">Cantidad dinero</string>
    <string name="nombre_sobreCs">Nombre sobre</string>
    <string name="crearCS">Crear</string>
    <string name="crear_sobreT">Crear Sobre</string>
    <string name="eliminarS">Eliminar</string>
    <string name="eliminar_sobreT">Eliminar Sobre</string>
    <string name="historial_de_sobresT">Historial de Sobres</string>
    <string name="visualizaci_n_sucursales">Visualización Sucursales:</string>
    <string name="tel_2896_234_091">Tel: 2896-234-091</string>
    <string name="tecbankmovil_gmail_com">tecbankmovil@gmail.com</string>
    <string name="ubicacionesS">Ubicaciones</string>
    <string name="horario_sucursalesT">Horario Sucursales:</string>
    <string name="contacto_y_correoT">Contacto y Correo:</string>
    <string name="cargar_y_retirar_dineroT">Cargar y Retirar Dinero</string>
    <string name="cargarDS">Cargar</string>
    <string name="retirarDS">Retirar</string>
    <string name="transferencia_entre_cuentasTT">Transferencia entre cuentas</string>
    <string name="cuenta_externaBT">Cuenta Externa</string>
    <string name="cuenta_tecbankBT">Cuenta TECBANK</string>
    <string name="cuentaVERT">Cuenta</string>

</resources>