<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF5858"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif"
        android:freezesText="false"
        android:text="@string/tecbank"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif"
        android:text="@string/movil"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="72dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bank2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="135dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/iniciar_sesi_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="294dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="79dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/no_tiene_una_cuenta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/white"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="68dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="275dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="68dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <EditText
            android:id="@+id/password"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>